# gsender

./: .cypress.env.json  .cypress.envexample.json  .dockerignore  .env.example  .eslintignore  .eslintrc.js  .gitattributes  .gitignore  .npmrc  .prettierignore  .stylintrc  .travis.yml  .yarnrc.yml  CLAUDE.md  Dockerfile  DockerfilePi  DockerfilePiBuilder  LICENSE  README.md  WindowsSigner.js  YMODEM_IMPLEMENTATION.md  _appveyor.yml  _tailwind.config.ts  appveyor.yml  babel.config.js  biome.json  build.config.js  changed_files.txt  cypress.config.js  cypress.envexample.json  cypress_output.txt  electron-builder.pendant.json  electron-builder.yml  esbuild.config.js  filetoflashuno.hex  hashExecutable.js  index.d.ts  index.hbs  index.html  jest.config.js  (+28 more)
.github/: FUNDING.yml
__tests__/: smoke.test.jsx
apps/pendant/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json
apps/pendant/src-tauri/capabilities/: main.json
apps/pendant/src-tauri/src/: lib.rs  main.rs
cypress/: README.md  TESTING.md
electron-build/: LICENSE  entitlements.mac.inherit.plist  entitlements.mac.plist  icon-edge.icns  icon-pendant.icns  icon.icns  installer.nsh
examples/: .cncrc
plugins/: README.md
scripts/: build-pi.sh  build-sidecar.js  dev-hot-reload.js  electron-after-pack.js  electron-builder-pendant.sh  electron-builder.sh  package-sync.js  prebuild-dev.sh  prebuild-prod.sh  prepare-default-plugins.js  readme_sync.js  sign-node-binaries.js  travis-docker-build.sh
src/: index.html  main.js  mystyle.css  package.json  pendant-main.js  pendant-package.json  sentryInit.js  (+2 more)
(+3358 files in other folders)
